Fix committer name in project tab

--- a/src/main/resources/templates/plugins/git/projecttabpanels/git-project-tab.vm
+++ b/src/main/resources/templates/plugins/git/projecttabpanels/git-project-tab.vm
@@ -111,7 +111,7 @@
 						#if ($commit.committerIsAuthor)
 							$!{commit.authorName}
 						#else
-							$!{commit.authorName} / $!{git.committerName}
+							$!{commit.authorName} / $!{commit.committerName}
 						#end
 					</td>
                     <td bgcolor="#ffffff">#makelinkedhtml($commit.revision.getFullMessage().trim())</td>
